--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8">
 		<title><f:render section="Title" /></title>
 		<f:base />
+		<link rel="stylesheet/less" href="{f:uri.resource(path:'res/bootstrap/less/bootstrap.less')}">
+		<link rel="stylesheet/less" href="{f:uri.resource(path:'CSS/tick.less')}">
+		<script src="{f:uri.resource(path:'res/less.js/less-1.3.0.min.js')}"></script>
 	</head>
 	<body>
 		<f:flashMessages class="flashmessages" />
