--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -9,6 +9,17 @@
 		<script src="{f:uri.resource(path:'res/less.js/less-1.3.0.min.js')}"></script>
 	</head>
 	<body>
+
+		<div class="navbar navbar-fixed-top">
+			<div class="navbar-inner">
+				<div class="container">
+					<a class="brand" href="/">
+						Tick
+					</a>
+				</div>
+			</div>
+		</div>
+
 		<f:flashMessages class="flashmessages" />
 
 		<h1><f:render section="Title" /></h1>
