changed my mind about the grid of the content

--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -35,7 +35,9 @@
 			</div>
 
 			<div class="row">
-				<f:render section="Content" />
+				<div class="span12">
+					<f:render section="Content" />
+				</div>
 			</div>
 		</div>
 	</body>
