--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -10,9 +10,10 @@
 					<ul>
 						<f:for each="{templates}" as="template">
 							<li>
-								<f:link.action action="show" arguments="{template: template}">{checklist.name}</f:link.action>
-								<f:link.action action="edit" arguments="{template: template}">Edit</f:link.action>
-								<f:link.action action="delete" arguments="{template: template}">Delete</f:link.action>
+								<f:link.action action="show" controller="Template" arguments="{template: template}">{checklist.name}</f:link.action>
+								<f:link.action action="new" controller="Checklist" arguments="{template: template}" class="btn btn-small btn-success">
+									Start
+								</f:link.action>
 							</li>
 						</f:for>
 					</ul>
@@ -21,7 +22,7 @@
 					<p>No templates created yet.</p>
 				</f:else>
 			</f:if>
-			<p><f:link.action action="new">Create a new checklist</f:link.action></p>
+			<p><f:link.action action="new" controller="Template" class="btn btn-primary">Create a new template</f:link.action></p>
 		</div>
 		<div class="span6">
 			<f:if condition="{checklists}">
@@ -29,18 +30,15 @@
 					<ul>
 						<f:for each="{checklists}" as="checklist">
 							<li>
-								<f:link.action action="show" arguments="{checklist: checklist}">{checklist.name}</f:link.action>
-								<f:link.action action="edit" arguments="{checklist: checklist}">Edit</f:link.action>
-								<f:link.action action="delete" arguments="{checklist: checklist}">Delete</f:link.action>
+								<f:link.action action="show" controller="Checklist" arguments="{checklist: checklist}">{checklist.name}</f:link.action>
 							</li>
 						</f:for>
 					</ul>
 				</f:then>
 				<f:else>
-					<p>No checklists created yet.</p>
+					<p>No checklists started yet. Start one by clicking the button next to the template.</p>
 				</f:else>
 			</f:if>
-			<p><f:link.action action="new">Create a new checklist</f:link.action></p>
 		</div>
 	</div>
 
