--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -42,7 +42,7 @@
 					<ul>
 						<f:for each="{checklists}" as="checklist">
 							<li>
-								<f:link.action action="show" controller="Checklist" arguments="{checklist: checklist}">{checklist.name}</f:link.action>
+								<f:link.action action="show" controller="Checklist" arguments="{checklist: checklist}">{checklist.projectId} - {checklist.template.name}</f:link.action>
 							</li>
 						</f:for>
 					</ul>
