--- a/Resources/Private/Layouts/Default.html
+++ b/Resources/Private/Layouts/Default.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet/less" href="{f:uri.resource(path:'res/bootstrap/less/bootstrap.less')}">
 		<link rel="stylesheet/less" href="{f:uri.resource(path:'CSS/tick.less')}">
 		<script src="{f:uri.resource(path:'res/less.js/less-1.3.0.min.js')}"></script>
+		<script src="{f:uri.resource(path:'res/JS/jquery-1.7.2.min.js')}"></script>
+		<script src="{f:uri.resource(path:'res/JS/tick.js')}"></script>
 	</head>
 	<body>
 
