Backlink of Template Show form redirects to index action of standard controller

--- a/Resources/Private/Templates/Template/Show.html
+++ b/Resources/Private/Templates/Template/Show.html
@@ -9,5 +9,5 @@
 			<td>{template.name}</td>
 		</tr>
 	</table>
-	<f:link.action action="index">Back</f:link.action>
+	<f:link.action action="index" controller="Standard">Back</f:link.action>
 </f:section>
