--- a/Resources/Private/Templates/Taskgroup/Show.html
+++ b/Resources/Private/Templates/Taskgroup/Show.html
@@ -17,7 +17,7 @@
 					<ul>
 						<f:for each="{taskgroup.tasks}" as="task">
 							<li>
-								{task.name}
+								{task.name} {task.description}
 							</li>
 						</f:for>
 					</ul>
