--- a/Resources/Private/Templates/Checklist/Show.html
+++ b/Resources/Private/Templates/Checklist/Show.html
@@ -26,7 +26,7 @@
 								<f:for each="{checklist.ticks}" as="tick">
 									<f:if condition="{tick.task} == {task}">
 										<f:then>
-											<f:link.action action="delete" controller="Tick" arguments="{tick: tick}">UNTICK</f:link.action>
+											<f:link.action action="delete" controller="Tick" arguments="{tick: tick, checklist: checklist}">UNTICK</f:link.action>
 										</f:then>
 										<f:else>
 											<f:form id="newTickForm" method="POST" action="create" object="{newTick}" controller="Tick" name="newTick" arguments="{checklist: checklist}">
