--- a/Resources/Private/Templates/Template/Show.html
+++ b/Resources/Private/Templates/Template/Show.html
@@ -15,9 +15,25 @@
 			<f:if condition="{template.taskgroups}">
 				<f:then>
 					<ul>
-						<f:for each="{template.taskgroups}" as="taskgroup">
+						<f:for each="{template.taskgroups}" as="taskgroup" iteration="iterator">
 							<li>
-								<h5><f:link.action action="show" controller="Taskgroup" arguments="{template: template, taskgroup: taskgroup}">{taskgroup.name}</f:link.action></h5>
+								<h5><f:link.action action="show" controller="Taskgroup" arguments="{template: template, taskgroup: taskgroup}">{taskgroup.name}</f:link.action>
+								<f:if condition="{iterator.isFirst}">
+									<f:else>
+										<f:link.action action="shift" controller="Taskgroup" arguments="{template: template, taskgroupToShift: taskgroup, newValue: '-1'}">
+											<img src="{f:uri.resource(path:'Icons/arrowUp.png')}" />
+										</f:link.action>
+									</f:else>
+								</f:if>
+
+								<f:if condition="{iterator.isLast}">
+									<f:else>
+										<f:link.action action="shift" controller="Taskgroup" arguments="{template: template, taskgroupToShift: taskgroup, newValue: '1'}">
+											<img src="{f:uri.resource(path:'Icons/arrowDown.png')}" />
+										</f:link.action>
+									</f:else>
+								</f:if>
+								</h5>
 							</li>
 						</f:for>
 					</ul>
