--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -15,6 +15,9 @@
 								<h5><f:link.action action="show" controller="Template" arguments="{template: template}">{template.name}</f:link.action>
 								<f:link.action action="new" controller="Checklist" arguments="{template: template}" class="btn btn-mini btn-success">
 									Start
+								</f:link.action>
+								<f:link.action action="edit" controller="Template" arguments="{template: template}" class="btn btn-mini btn-info">
+									Edit
 								</f:link.action></h5>
 							</li>
 						</f:for>
