--- a/Resources/Private/Templates/Taskgroup/Edit.html
+++ b/Resources/Private/Templates/Taskgroup/Edit.html
@@ -3,13 +3,13 @@
 <f:section name="Title">Edit taskgroup "{taskgroup.name}"</f:section>
 
 <f:section name="Content">
-	<f:form action="update" object="{taskgroup}" name="taskgroup">
+	<f:form action="update" object="{taskgroup}" name="taskgroup" arguments="{template: template}">
 		<ol>
 			<li>
 				<label for="name">Name</label>
 				<f:form.textfield property="name" id="name" />
 			</li>
-		
+
 			<li>
 				<f:form.submit value="Update"/>
 			</li>
