--- a/Resources/Private/Templates/Task/Edit.html
+++ b/Resources/Private/Templates/Task/Edit.html
@@ -3,13 +3,13 @@
 <f:section name="Title">Edit task "{task.name}"</f:section>
 
 <f:section name="Content">
-	<f:form action="update" object="{task}" name="task">
+	<f:form action="update" object="{task}" name="task" arguments="{template: template, taskgroup: taskgroup}">
 		<ol>
 			<li>
 				<label for="name">Name</label>
 				<f:form.textfield property="name" id="name" />
 			</li>
-		
+
 			<li>
 				<f:form.submit value="Update"/>
 			</li>
