--- a/Resources/Private/Templates/Taskgroup/Show.html
+++ b/Resources/Private/Templates/Taskgroup/Show.html
@@ -19,6 +19,9 @@
 							<li>
 								<h5>
 									{task.name}
+									<f:link.action action="edit" controller="Task" arguments="{template: taskgroup.template, taskgroup: taskgroup, task: task}" class="btn btn-mini btn-info">
+										Edit
+									</f:link.action>
 									<f:if condition="{iterator.isFirst}">
 										<f:else>
 											<f:link.action action="shift" controller="Task" arguments="{template: taskgroup.template, taskgroup: taskgroup, taskToShift: task, newValue: '-1'}">
