--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -31,8 +31,8 @@
 				<div id="showNewTemplateFields" class="btn btn-primary">Create a new template</div>
 				<f:form id="newTemplateForm" method="POST" action="create" object="{newTemplate}" controller="Template" name="newTemplate">
 					<div class="newTemplateFields">
-						<f:form.textfield property="name" id="name" />
-						<f:form.submit class="btn btn-mini btn-success" value="Create" />
+						<f:form.textfield property="name" id="templateName" />
+						<span id="createTemplate" class="btn btn-mini btn-success">Create</span>
 					</div>
 				</f:form>
 			</p>
