--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -9,7 +9,7 @@
 		<div class="span6">
 			<f:if condition="{templates}">
 				<f:then>
-					<ul>
+					<ul id="templateList">
 						<f:for each="{templates}" as="template">
 							<li>
 								<h5><f:link.action action="show" controller="Template" arguments="{template: template}">{template.name}</f:link.action>
