Correct AJAX-List-Replace after first template creation

--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -24,7 +24,7 @@
 					</ul>
 				</f:then>
 				<f:else>
-					<p>No templates created yet.</p>
+					<p id="templateList">No templates created yet.</p>
 				</f:else>
 			</f:if>
 			<p class="addTemplate">
