--- a/Resources/Private/Templates/Taskgroup/Show.html
+++ b/Resources/Private/Templates/Taskgroup/Show.html
@@ -14,7 +14,7 @@
 		<div class="span6">
 			<f:if condition="{taskgroup.tasks}">
 				<f:then>
-					<ul>
+					<ul id="taskList">
 						<f:for each="{taskgroup.tasks}" as="task" iteration="iterator">
 							<li>
 								<h5>
@@ -43,7 +43,7 @@
 					</ul>
 				</f:then>
 				<f:else>
-					<p>No tasks created yet.</p>
+					<p id="taskList">No tasks created yet.</p>
 				</f:else>
 			</f:if>
 			<p class="addTask">
@@ -56,7 +56,9 @@
 						<div class="taskDescription">
 							Description : <f:form.textfield property="description" id="description" />
 						</div>
-						<f:form.submit class="btn btn-mini btn-success" value="Create" />
+						<f:form.hidden id="template" property="template" value="{template}" />
+						<f:form.hidden id="taskgroup" property="taskgroup" value="{taskgroup}" />
+						<span id="createTask" class="btn btn-mini btn-success">Create</span>
 					</div>
 				</f:form>
 			</p>
