[FEATURE] Display AJAX-Loader during creation of a template by AJAX

--- a/Resources/Private/Templates/Standard/Index.html
+++ b/Resources/Private/Templates/Standard/Index.html
@@ -55,6 +55,8 @@
 		</div>
 	</div>
 
-
+	<div id="ajaxLoader">
+		<img src="{f:uri.resource(path:'Icons/ajaxLoader.gif')}" />
+	</div>
 
 </f:section>
