[FEATURE] Added AJAX loader icon to the taskgroup creation process

--- a/Resources/Private/Templates/Template/Show.html
+++ b/Resources/Private/Templates/Template/Show.html
@@ -58,4 +58,8 @@
 		</div>
 	</div>
 	<f:link.action action="index" controller="Standard">Back</f:link.action>
+
+	<div id="ajaxLoader">
+		<img src="{f:uri.resource(path:'Icons/ajaxLoader.gif')}" />
+	</div>
 </f:section>
