--- a/Resources/Private/Templates/Taskgroup/Show.html
+++ b/Resources/Private/Templates/Taskgroup/Show.html
@@ -65,4 +65,8 @@
 		</div>
 	</div>
 	<f:link.action action="show" controller="Template" arguments="{template: template}">Back</f:link.action>
+
+	<div id="ajaxLoader">
+		<img src="{f:uri.resource(path:'Icons/ajaxLoader.gif')}" />
+	</div>
 </f:section>
